remove some unnecessary things

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DISCORD_TOKEN=
+DISCORD_GUILD_ID=
+DISCORD_COMMAND_PING_CHAT_ID=
+DISCORD_COMMAND_PING_MESSAGECONTEXT_ID=
+DISCORD_COMMAND_PING_USERCONTEXT_ID=
