--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DISCORD_GUILD_ID=
 DISCORD_COMMAND_PING_CHAT_ID=
 DISCORD_COMMAND_PING_MESSAGECONTEXT_ID=
 DISCORD_COMMAND_PING_USERCONTEXT_ID=
+PORT=
