--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"@sapphire/utilities": "^3.18.1",
 		"@skyra/env-utilities": "^1.3.0",
 		"colorette": "^2.0.20",
-		"discord.js": "^14.17.3"
+		"discord.js": "^14.17.3",
+		"express": "^5.1.0"
 	},
 	"devDependencies": {
 		"@sapphire/cli": "^1.9.3",
 		"@sapphire/prettier-config": "^2.0.0",
 		"@sapphire/ts-config": "^5.0.1",
+		"@types/express": "^5.0.5",
 		"@types/node": "^22.10.7",
 		"@types/ws": "^8.5.13",
 		"prettier": "^3.4.2",
